completed call api to issue one credential

--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "crypto-js": "^4.1.1",
     "jsencrypt": "^3.3.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "node-rsa": "^1.1.1",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
